src/test/deca/context/invalid/SansObjet/DeclVar-UnaryMinus-float-boolean.deca
// Description:
//    Declaration of a float variable using - operation on a boolean variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    boolean x =  false; 
    float z = -x ; 
}
